# ProxiFyreUI

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: configuration.rs  elevate.rs  lib.rs  main.rs  service.rs  tray.rs
src/lib/: AppPicker.svelte  api.ts  stores.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/excludes/: +page.svelte
src/routes/proxies/: +page.svelte
src/routes/settings/: +page.svelte
