[package]
name = "proxifyre-ui"
version = "0.1.0"
description = "ProxiFyre UI - Configuration manager for ProxiFyre SOCKS5 proxifier (Windows only)"
authors = ["Dmitry Osin <d@osin.pro>"]
edition = "2021"

[lib]
# The `_lib` suffix avoids a naming conflict with the bin on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
name = "proxifyre_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

